--- a/yizu/Home/SearchPage/view/CustomSearchBar.xib
+++ b/yizu/Home/SearchPage/view/CustomSearchBar.xib
@@ -16,23 +16,37 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7tv-Hf-Xhn">
-                    <rect key="frame" x="309" y="20" width="46" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" title="取消"/>
-                </button>
-                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="输入搜索内容" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fLP-8m-ZSo">
-                    <rect key="frame" x="16" y="20" width="285" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="输入要搜索的内容" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fLP-8m-ZSo">
+                    <rect key="frame" x="16" y="17" width="279" height="30"/>
                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
+                    <connections>
+                        <action selector="searchTextDidChanged:" destination="lb2-ku-LeQ" eventType="editingChanged" id="ThB-EX-s34"/>
+                    </connections>
                 </textField>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oeS-fq-fsN">
+                    <rect key="frame" x="325" y="17" width="31" height="30"/>
+                    <state key="normal" title="取消"/>
+                    <connections>
+                        <action selector="pressCancelBtn:" destination="lb2-ku-LeQ" eventType="touchUpInside" id="Drh-it-fA9"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="0.93826910621761661" green="0.93826910621761661" blue="0.93826910621761661" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="fLP-8m-ZSo" firstAttribute="centerY" secondItem="cVw-MA-ME3" secondAttribute="centerY" id="Clj-bM-rcI"/>
+                <constraint firstItem="cVw-MA-ME3" firstAttribute="trailing" secondItem="fLP-8m-ZSo" secondAttribute="trailing" constant="80" id="SDH-EY-hPA"/>
+                <constraint firstItem="oeS-fq-fsN" firstAttribute="leading" secondItem="fLP-8m-ZSo" secondAttribute="trailing" constant="30" id="dDd-lR-TzA"/>
+                <constraint firstItem="oeS-fq-fsN" firstAttribute="top" secondItem="fLP-8m-ZSo" secondAttribute="top" id="f9Y-hV-aEM"/>
+                <constraint firstItem="fLP-8m-ZSo" firstAttribute="leading" secondItem="cVw-MA-ME3" secondAttribute="leading" constant="16" id="rQH-fg-r5L"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="cVw-MA-ME3"/>
-            <point key="canvasLocation" x="-28.5" y="17"/>
+            <connections>
+                <outlet property="textField" destination="fLP-8m-ZSo" id="O3f-jJ-bmG"/>
+            </connections>
+            <point key="canvasLocation" x="-323" y="-281"/>
         </view>
     </objects>
 </document>
