活动界面搭建

--- a/yizu/ActivityPage/ActivityList/view/Activity.storyboard
+++ b/yizu/ActivityPage/ActivityList/view/Activity.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,53 +20,74 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <containerView key="tableHeaderView" opaque="NO" contentMode="scaleToFill" id="0pA-Qo-rDj">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="340"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="320"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                             <connections>
                                 <segue destination="anv-PN-agY" kind="embed" id="yDM-bD-9Mr"/>
                             </connections>
                         </containerView>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellA" rowHeight="260" id="fLz-aU-A5n" customClass="ActivityCell">
-                                <rect key="frame" x="0.0" y="368" width="375" height="260"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellA" rowHeight="300" id="fLz-aU-A5n" customClass="ActivityCell">
+                                <rect key="frame" x="0.0" y="348" width="375" height="300"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fLz-aU-A5n" id="oO5-jr-M4h">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="259.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="299.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="P0c-UO-le0">
-                                            <rect key="frame" x="0.0" y="31" width="375" height="115.5"/>
-                                            <color key="backgroundColor" red="0.44127377239999999" green="1" blue="0.98838108170000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DG1-0L-P5u">
                                             <rect key="frame" x="0.0" y="8" width="375" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="HBr-f9-vKa"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P4d-eG-dEY" customClass="CustomCellScrollView">
-                                            <rect key="frame" x="0.0" y="144.5" width="375" height="115.5"/>
+                                            <rect key="frame" x="0.0" y="214.5" width="375" height="80"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="80" id="3dT-N2-An5"/>
+                                            </constraints>
                                         </scrollView>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="P0c-UO-le0">
+                                            <rect key="frame" x="10" y="31" width="355" height="178.5"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EPx-jh-i5g">
+                                            <rect key="frame" x="16" y="190" width="33" height="14.5"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pej-r8-28b">
+                                            <rect key="frame" x="30" y="169.5" width="30.5" height="13.5"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="P4d-eG-dEY" secondAttribute="bottom" id="8OJ-wA-fcm"/>
+                                        <constraint firstItem="P4d-eG-dEY" firstAttribute="top" secondItem="EPx-jh-i5g" secondAttribute="bottom" constant="10" id="3hR-IO-CwV"/>
+                                        <constraint firstAttribute="bottom" secondItem="P4d-eG-dEY" secondAttribute="bottom" constant="5" id="8OJ-wA-fcm"/>
+                                        <constraint firstItem="EPx-jh-i5g" firstAttribute="leading" secondItem="oO5-jr-M4h" secondAttribute="leadingMargin" constant="8" id="9hn-QI-IzF"/>
+                                        <constraint firstItem="pej-r8-28b" firstAttribute="leading" secondItem="oO5-jr-M4h" secondAttribute="leadingMargin" constant="22" id="I3H-8A-RoB"/>
                                         <constraint firstItem="DG1-0L-P5u" firstAttribute="top" secondItem="oO5-jr-M4h" secondAttribute="top" constant="8" id="Jue-LB-CRA"/>
-                                        <constraint firstItem="P4d-eG-dEY" firstAttribute="top" secondItem="P0c-UO-le0" secondAttribute="bottom" constant="-2" id="LQq-BN-s6k"/>
+                                        <constraint firstItem="P4d-eG-dEY" firstAttribute="top" secondItem="P0c-UO-le0" secondAttribute="bottom" constant="5" id="LQq-BN-s6k"/>
+                                        <constraint firstItem="EPx-jh-i5g" firstAttribute="top" secondItem="pej-r8-28b" secondAttribute="bottom" constant="7" id="aPR-y9-j5I"/>
                                         <constraint firstItem="P0c-UO-le0" firstAttribute="top" secondItem="DG1-0L-P5u" secondAttribute="bottom" constant="2" id="bqc-S3-Owu"/>
                                         <constraint firstItem="P4d-eG-dEY" firstAttribute="leading" secondItem="oO5-jr-M4h" secondAttribute="leading" id="bsC-W3-Qim"/>
-                                        <constraint firstAttribute="trailing" secondItem="P0c-UO-le0" secondAttribute="trailing" id="eY2-Hy-JHU"/>
+                                        <constraint firstAttribute="trailing" secondItem="P0c-UO-le0" secondAttribute="trailing" constant="10" id="eY2-Hy-JHU"/>
                                         <constraint firstItem="DG1-0L-P5u" firstAttribute="leading" secondItem="oO5-jr-M4h" secondAttribute="leading" id="edw-6D-pRM"/>
-                                        <constraint firstItem="P0c-UO-le0" firstAttribute="leading" secondItem="oO5-jr-M4h" secondAttribute="leading" id="iL7-0h-9sy"/>
+                                        <constraint firstItem="P0c-UO-le0" firstAttribute="leading" secondItem="oO5-jr-M4h" secondAttribute="leading" constant="10" id="iL7-0h-9sy"/>
                                         <constraint firstAttribute="trailing" secondItem="DG1-0L-P5u" secondAttribute="trailing" id="okU-gY-b4p"/>
-                                        <constraint firstItem="P4d-eG-dEY" firstAttribute="height" secondItem="P0c-UO-le0" secondAttribute="height" id="vMQ-vG-DYT"/>
                                         <constraint firstAttribute="trailing" secondItem="P4d-eG-dEY" secondAttribute="trailing" id="x3U-Xu-an1"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="bigIma" destination="P0c-UO-le0" id="WQK-TG-6f8"/>
+                                    <outlet property="cityLab" destination="pej-r8-28b" id="n43-NW-KJY"/>
+                                    <outlet property="customScroll" destination="P4d-eG-dEY" id="WbD-ne-UHk"/>
+                                    <outlet property="headLab" destination="DG1-0L-P5u" id="0lm-CJ-PRl"/>
+                                    <outlet property="writingpicLab" destination="EPx-jh-i5g" id="gdK-Jp-ol2"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -77,14 +99,14 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XUK-03-cRp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-882.39999999999998" y="-66.11694152923539"/>
+            <point key="canvasLocation" x="-1319" y="-519"/>
         </scene>
         <!--First Scroll View Controller-->
         <scene sceneID="HjA-Fw-YbV">
             <objects>
                 <viewController id="anv-PN-agY" customClass="FirstScrollViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mKQ-Jc-dBl">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="340"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="mgm-hH-X2N"/>
@@ -92,7 +114,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p0U-sp-EV4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-207" y="-166"/>
+            <point key="canvasLocation" x="-252" y="-547"/>
         </scene>
     </scenes>
 </document>
